# SportsRank

./: .editorconfig  .gitattributes  .gitignore  MVP.pages  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
.githooks/: pre-commit
.github/workflows/: ci.yml
app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  page.tsx
app/actions/: admin.ts  auth.ts  entry.ts  generate.ts  import.ts  profile.ts
app/analytics/: page.tsx
app/calendar/: page.tsx
app/dashboard/: page.tsx
app/history/: page.tsx
app/login/: page.tsx
app/tutorial/: page.tsx
components/admin/: generate-form.tsx  import-form.tsx  picks-preview.tsx  settle-round-button.tsx
docs/: architecture.md  data-model.md  rls.md
lib/: auth.ts  format.ts  sports.ts  timezone.ts  types.ts  visuals.ts
public/: offline.html  sw.js
scripts/: reset-dev-cache.mjs
supabase/: config.toml  seed.sql
tools/: __init__.py
tools/odds_generator/: README.md  __init__.py  anchoring.py  api_client.py  calendar_client.py  cli.py  featured_selector.py  models.py  pyproject.toml  selector.py  sports_map.base.yaml  sports_map.py  sportsdata_adapter.py  sportsdata_client.py  supabase_writer.py  writer.py
tools/odds_generator/config/: featured_quotas.yaml  sports_map.yaml  sportsdata_map.base.yaml
tools/odds_generator/tests/: test_anchoring.py  test_featured_selector.py  test_models.py  test_raw_jornada_source.py  test_selector.py  test_selector_seed.py  test_sports_map.py  test_sportsdata_adapter.py  test_supabase_writer.py  test_transform.py
(+79 files in other folders)
